examples/bad/16_1_break_outside_of_loop.soy
a = 5;

if (a > 4) {
    break; # Error: not in loop, same with continue
}

